--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -440,13 +440,16 @@
                             för att kunna utöka ditt sociala nätverk.
                         </li>
                         <li>
-                            Kompisbyrån matchar ihop två nya kompisar främst baserat på liknande intressen. Det innebär att 
-                            du kan matchas med en person som till exempel är i en annan ålder eller kön. Om du har 
-                            önskemål/krav, vänligen skriv detta tydligt i din ansökan så att vi kan försöka tillgodose det. 
+                            Kompisbyrån matchar ihop nya fikakompisar baserat på liknande intressen, nya musikkompisar baserat 
+                            på liknande musikintressen och nya startkompisar baserat på den kommun ni bor i. 
                         </li>
                         <li>
-                            Du måste kunna träffas i Göteborg, Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås 
-                            eller Örebro. Vi hoppas kunna länka samman nya kompisar i fler städer i framtiden.
+                            Som fikakompis eller musikkompis måste kunna träffas i Göteborg, Jönköping, Linköping, Malmö, 
+                            Stockholm, Umeå, Uppsala, Västerås eller Örebro. Vi hoppas kunna länka samman nya kompisar i fler 
+                            städer i framtiden.
+                        </li>
+                        <li>
+                            Som Startkompis måste du kunna träffas i kommunerna Lidingö, Nynäshamn, Solna, Vaxholm eller Österåker.
                         </li>
                         <li>
                             Kompisbyrån ansvarar endast för att länka samman personer som har bott i Sverige under kortare tid med 
@@ -461,18 +464,18 @@
                             Alla över 18 år (myndiga) får delta.
                         </li>
                         <li>
-                            Du betalar bara för din egen fika, att registrera sig är gratis.
+                            Att registrera sig hos Kompisbyrån är gratis. Ev. fika eller andra kostnader kopplade till mötet 
+                            betalar varje person själv.
                         </li>
                         <li>
                             Kompisbyrån rekommenderar att ni träffas ungefär 1 timme på ett offentligt ställe i stadens centrala del.
                         </li>
                         <li>
-                            När du har registrerat din ansökan garanterar du att din information är korrekt och godkänner att 
-                            informationen; kan komma att behandlas enligt PUL och hamnar i Kompisbyråns register så att vi kan hitta 
-                            nya kompisar till dig, att din information och e-mail skickas till din nya kompis, och att vi bjuder in 
-                            dig till Kompisbyråns aktiviteter eller erbjudanden. Om du vill korrigera dina lämnade uppgifter som finns 
-                            registrerade hos oss, vänligen logga in med din e-mail och ditt lösenord och uppdatera din profil. 
-                            Personuppgiftsansvarig är Kompisbyråns styrelse.
+                            När du har registrerat din ansökan garanterar du att din information är korrekt och godkänner att informationen; 
+                            kan komma att behandlas enligt PUL och hamnar i Kompisbyråns register så att vi kan hitta nya kompisar till dig, 
+                            att din information, email och telefonnummer skickas till din nya kompis, och att vi bjuder in dig till Kompisbyråns 
+                            aktiviteter eller erbjudanden. Om du vill korrigera dina lämnade uppgifter som finns registrerade hos oss, vänligen 
+                            logga in med din email och ditt lösenord och uppdatera din profil. Personuppgiftsansvarig är Kompisbyråns styrelse.
                         </li>
                         <li>
                             Vår ambition är att hitta en ny kompis till dig inom 30 dagar. Det innebär att du kan få vänta.
@@ -481,13 +484,12 @@
                             När vi har tagit emot din ansökan, bekräftar vi detta genom att skicka ett email till dig.
                         </li>
                         <li>
-                            Respektera varandra. Kom ihåg att en avbokning påverkar en annan person som har planerat och 
-                            sett fram emot en träff. Tänk efter en extra gång innan du anmäler dig, att du verkligen vill 
-                            vara med.
+                            Respektera varandra. Kom ihåg att en avbokning påverkar en annan person som har planerat och sett fram emot ert möte.
+                            Tänk efter en extra gång innan du anmäler dig, att du verkligen vill vara med.
                         </li>
                         <li>
-                            Det är bådas ansvar att kontakta varandra inom 7 dagar från att du fått ett matchningsmail 
-                            från oss. Byt gärna telefonnummer med varandra för att lättare bestämma träff.
+                            Det är den etablerade personens huvudansvar att ni kommer i kontakt med varandra inom 7 dagar från att ni fått ett 
+                            matchningsmail från oss. Byt gärna telefonnummer med varandra för att lättare bestämma möte.
                         </li>
                         <li>
                             Du måste behandla alla på ett respektfullt sätt. Tänk på att vara tydliga mot varandra då 
@@ -505,8 +507,7 @@
                             Kompisbyrån kan inte garantera att vi hittar en ny kompis till dig men vi gör alltid vårt bästa.
                         </li>
                         <li>
-                            Vi vill hela tiden bli bättre på vårt arbete. Därför skickar vi ett email till dig efter ert möte för 
-                            att fråga hur det var.
+                            Vi vill hela tiden bli bättre på vårt arbete. Därför kontaktar vi dig efter ert möte för att fråga hur det var.
                         </li>
                     </ul>]]></target>
             </trans-unit>
