--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -433,13 +433,16 @@
                             for you to broaden your social network.
                         </li>
                         <li>
-                            Kompisbyrån connects two new persons, mainly based on similar interests. This means that you can be matched with 
-                            a person who is, for example, in another age or sex. If you have special wishes/ demands, please write it clearly 
-                            in your application so that we can decide if we can meet it.
+                            Kompisbyrån connects two new fika friends, mainly based on similar interests; new music friends based on similar 
+                            music interests and new start friends based on the municipality they both live in. 
                         </li>
                         <li>
-                            You must be able to meet your new Fika or Music friend in 1 of 9 cities: Göteborg, Jönköping, Linköping, Malmö, 
-                            Stockholm, Umeå, Uppsala, Västerås or Örebro. We hope that we can connect new people in more cities in the future. 
+                            As a Fika friend or Music friend, you must be able to meet your new Fika or Music friend in 1 of 9 cities: Göteborg, 
+                            Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås or Örebro. We hope that we can connect new people 
+                            in more cities in the future. 
+                        </li>
+                        <li>
+                            As a Start friend, you must be able to meet in 1 of 5 municipalities: Lidingö, Nynäshamn, Solna, Vaxholm or Österåker. 
                         </li>
                         <li>
                             Kompisbyrån is only responsible for linking together people who have lived in Sweden for a short time with people 
@@ -447,13 +450,13 @@
                         </li>
                         <li>
                             The starting point is that you meet the same person 1 time. If you think it is fun, you can meet again by your own. 
-                            If you want to meet a new person, you log in and make a new request. 
+                            If you want to meet a new person, you sign in and make a new request. 
                         </li>
                         <li>
                             Everyone over 18 years (of age) can participate.
                         </li>
                         <li>
-                            You only have to pay for your own "fika" (for example, a cup of coffee), the registration is for free.
+                            The registration is for free. Any costs for refreshments/"fika" or other expenses related to the meeting must be paid by each person.
                         </li>
                         <li>
                             Kompisbyrån recommends that you meet for about 1 hour at a public place in the central part of that city that you have chosen. 
@@ -461,7 +464,7 @@
                         <li>
                             When you have registered your application, you warrant that your information is correct and agree that the information: 
                             may be treated according to PUL and is saved in Kompisbyrån's register so that we can find new friends for you, that 
-                            your information and e-mail is sent to your new friend, and that we will invite you to Kompisbyrån's activities or 
+                            your information, e-mail and telephone number are sent to your new friend, and that we will invite you to Kompisbyrån's activities or 
                             offerings. If you want to adjust your submitted information that is registered, please log in with your e-mail and 
                             password and update your profile. Controller of personal data is Kompisbyrån’s Board.
                         </li>
@@ -476,7 +479,7 @@
                             Think twice before you sign up, to ensure that you really want to join us! 
                         </li>
                         <li>
-                            It is the responsibility of both two persons, that you establish contact with each other, within 7 days. We recommend 
+                            It is the main responsibility of the established Swede that you get in contact with each other within 7 days. We recommend 
                             that you exchange telephone numbers to easier get in contact with each other. 
                         </li>
                         <li>
