--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -708,8 +708,8 @@ Your friends at Kompisbyrån
                 <source>footer.text3</source>
                 <target>
                     Stöd oss och låt fler få chansen att träffa en ny fikakompis att öva svenska med. Varenda krona vi 
-                    får in går till att skapa fler möjligheter för nyanlända och etablerade svenskar att mötas. <strong>Swisha 
-                    300 kr till 1236 809 602</strong> eller sätt in pengar på <strong>BG-konto 386-3982</strong>. Tack för ditt stöd!
+                    får in går till att skapa fler möjligheter för nyanlända och etablerade svenskar att mötas. Swisha 
+                    300 kr till 1236 809 602 eller sätt in pengar på BG-konto 386-3982. Tack för ditt stöd!
                 </target>
             </trans-unit>
             <trans-unit id="page.how_it_works.header">
