--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -874,8 +874,32 @@ Your friends at Kompisbyrån
                 <target>
                     <![CDATA[
                         <p>
-                            More information will soon be released. Open for registration from January 2017. 
+                            Discover your neighborhood with a new friend!  
                         </p>
+                        <p>
+                            Go for an 1 hour walk together with an established local who has lived in your neighborhood for a long time. You must live in one of these 
+                            municipalities: Lidingö, Nynäshamn, Solna, Vaxholm or Österåker.  
+                        </p>
+                        <p>
+                            <strong>How to sign up for a Start friend:</strong>
+                        </p>
+                        <p>
+                            1. <strong>Registration.</strong> Press the “Sign up”-button and fill out the application. The registration is for free. You will receive a 
+                            confirmation email when we have received your application. If you are a newcomer, you can also sign up through your municipality. 
+                        </p>
+                        <p>
+                            2. <strong>Match.</strong> We will send you an email with the contact details to your Start friend, or we will call you. 
+                        </p>
+                        <p>
+                            3. <strong>First contact.</strong> You contact your Start friend within 7 days to confirm date, time and place of the meeting. 
+                        </p>
+                        <p>
+                            4. <strong>Meeting.</strong> You meet and go for a walk in the neighborhood for about 1 hour. If you want, please take a picture 
+                            from your meeting and send to us!  
+                        <p>
+                            5. <strong>What happens after the meeting?</strong> We will contact you after the meeting to get to know more about your experience. 
+                            If both of you thought it was fun, you are welcome to continue to see each other on your own. You can also sign in and make a new 
+                            application to meet a new person, or simply be super happy to have been someone's Start friend! 
                     ]]>
                 </target>
             </trans-unit>
